[gd_scene load_steps=3 format=3 uid="uid://br01eprafwf0o"]

[ext_resource type="Script" path="res://scripts/HurtBox.gd" id="1_ikels"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7spef"]
radius = 21.0

[node name="HurtBox" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_ikels")

[node name="HurtBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7spef")
debug_color = Color(0.93848, 0.232103, 0.234118, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTime" type="Timer" parent="."]
wait_time = 10000.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTime" to="." method="_on_death_time_timeout"]
